--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
         "**/.DS_Store": true,
         "**/*.js.map": true,
         "**/*.js": {
-            "when": "$(basename).ts"
+            "when": "$(basename).tsx"
         }
     }
 }
