--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "typescript": "^2.8.1"
   },
   "dependencies": {
+    "@types/node": "^9.6.1",
     "@types/react": "^16.1.0",
-    "react": "^16.2.0"
+    "neweb-core": "^0.4.2",
+    "onemitter": "^0.2.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "semantic-ui-react": "^0.79.0"
   }
 }
