--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neweb-example-todo",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -29,7 +29,7 @@
   "dependencies": {
     "@types/node": "^9.6.1",
     "@types/react": "^16.1.0",
-    "neweb-core": "^0.4.2",
+    "neweb": "^0.5.3",
     "onemitter": "^0.2.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
